--- a/Fake-lighthouse-results/style.css
+++ b/Fake-lighthouse-results/style.css
@@ -39,7 +39,7 @@
     
     .label {
       font-weight:700;
-      font-size:0.9rem;
+      font-size: 0.9rem;
     }
   }
   
@@ -53,7 +53,7 @@
     display:grid;
     place-items:center;
     
-    > * {
+    * {
       grid-column: 1 / -1;
       grid-row: 1 / -1;
     }
