--- a/login-register-form/src/App.css
+++ b/login-register-form/src/App.css
@@ -37,11 +37,16 @@ input {
 button {
   border: none;
   background-color: rgb(184, 65, 158);
-  padding: 20px;
+  padding: 15px;
+  margin: 0.5rem 0;
   border-radius: 10px;
   cursor: pointer;
   color: #ffffff;
 }
+
+/* button:hover {
+  background-color: rgba(151, 28, 125, 0.8);
+} */
 
 .link-btn {
   background: none;
